--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,10 @@
 
 	<servlet>
 		<servlet-name>passio</servlet-name>
-		<servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet</servlet-class>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
-			<param-name>jaxrs.serviceClasses</param-name>
-			<param-value>passio.PassioResource</param-value>
-		</init-param>
-		<init-param>
-			<param-name>jaxrs.outInterceptors</param-name>
-			<param-value>passio.CorsInterceptor</param-value>
+			<param-name>javax.ws.rs.Application</param-name>
+			<param-value>passio.App</param-value>
 		</init-param>
 	</servlet>
 
