Add GAE Maven plugin for easier development.

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 					</webResources>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.appengine</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine.target.version}</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
